--- a/src/app/componets/section/section.css
+++ b/src/app/componets/section/section.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&display=swap");
 .section-container {
   position: relative;
   height: 100vh;
@@ -41,30 +42,19 @@
 }
 
 .tagline {
-  color: white;
+  color: #29272a;
   text-transform: uppercase;
+  font-family: "Familjen Grotesk", sans-serif;
   letter-spacing: 0.1em;
   font-size: 0.875rem;
   margin-bottom: 1rem;
 }
 
 .main-heading {
-  color: white;
+  color: #29272a;
+  font-family: "Familjen Grotesk", sans-serif;
   font-weight: 300;
-  font-size: 2.5rem;
+  font-size: 36px;
   max-width: 1000px;
   margin: 0;
-}
-
-/* Responsive text sizing */
-@media (min-width: 768px) {
-  .main-heading {
-    font-size: 3rem;
-  }
-}
-
-@media (min-width: 1024px) {
-  .main-heading {
-    font-size: 3.5rem;
-  }
 }
