--- a/src/app/componets/footer/footer.css
+++ b/src/app/componets/footer/footer.css
@@ -1,25 +1,41 @@
+@import url("https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&display=swap");
 .footer {
   background-color: #1a1a1a;
   color: white;
   padding: 3rem 0;
 }
-
 .footer-container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 1rem;
 }
-
+.footer-logo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.foote_logo{
+  filter: brightness(0) invert(1);
+}
 .footer-logo h2 {
+  font-family: "Familjen Grotesk", sans-serif;
   font-size: 2rem;
   margin-bottom: 2rem;
 }
+.footer-secondary-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-.footer-nav, .footer-secondary-nav {
+.footer-nav,
+.footer-secondary-nav {
   margin-bottom: 2rem;
 }
 
-.main-links, .secondary-links {
+.main-links,
+.secondary-links {
+  font-family: "Familjen Grotesk", sans-serif;
   list-style: none;
   padding: 0;
   display: flex;
@@ -27,13 +43,16 @@
   flex-wrap: wrap;
 }
 
-.main-links a, .secondary-links a {
+.main-links a,
+.secondary-links a {
+  font-family: "Familjen Grotesk", sans-serif;
   color: white;
   text-decoration: none;
   transition: opacity 0.3s ease;
 }
 
-.main-links a:hover, .secondary-links a:hover {
+.main-links a:hover,
+.secondary-links a:hover {
   opacity: 0.7;
 }
 
@@ -55,7 +74,8 @@
 
 /* Responsive Design */
 @media (max-width: 768px) {
-  .main-links, .secondary-links {
+  .main-links,
+  .secondary-links {
     flex-direction: column;
     gap: 1rem;
   }
